# internal/api/router.go
@@ -37,6 +37,8 @@ func NewRouter(cfg *config.Config, svc *service.Service) http.Handler {
 		r.Get("/apworlds", handleListApworlds(svc))
 		r.Post("/apworlds", handleUploadApworld(svc))
 		r.Get("/apworlds/{hash}/yaml", handleGetApworldTemplate(svc))
+		r.Put("/apworlds/{hash}/yaml", handleSetApworldTemplate(svc))
+		r.Post("/apworlds/{hash}/template", handleRegenerateApworldTemplate(svc))
 		r.Post("/apworlds/{hash}/preflight", handleRunApworldPreflight(svc))
 		r.Post("/apworlds/{hash}/preflight-override", handleOverrideApworldPreflight(svc))
 		r.Post("/preflight-generations", handleStartSlotPreflight(svc))
